plugins {
	id 'fabric-loom' version '1.15-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version + "-" + minecraft_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	exclusiveContent {
		forRepository {
			maven {
				name = "Modrinth"
				url = "https://api.modrinth.com/maven"
			}
		}
		filter {
			includeGroup "maven.modrinth"
		}
	}

	maven {
		name = "Gegy"
		url = "https://maven.gegy.dev/"
	}
}

loom {
    splitEnvironmentSourceSets()

	mods {
		"bbs" {
			sourceSet sourceSets.main
		}
	}

	accessWidenerPath.set(getRootProject().file("src/main/resources/bbs.accesswidener"))
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	
	// Uncomment the following line to enable the deprecated Fabric API modules. 
	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.

	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
	modImplementation "maven.modrinth:sodium:mc1.20.4-0.5.8"
	modImplementation "maven.modrinth:iris:1.7.2+1.20.4"
	modCompileOnly "maven.modrinth:distanthorizons:2.1.0-a-1.20.4"
	modCompileOnly "maven.modrinth:indium:1.0.31+mc1.20.4"

	modImplementation "org.anarres:jcpp:1.4.14"
	modImplementation "io.github.douira:glsl-transformer:2.0.0-pre13"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

// src/test holds manual sanity mains (no JUnit); they are compiled, not discovered as tests.
test {
	failOnNoDiscoveredTests = false
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			/* The project's name has a space in it, and Maven coordinates can't, so the
			 * artifact id is taken from the archives name instead of the default. */
			artifactId = project.base.archivesName.get()

			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

/* Addon API snapshot.
 *
 * The API's promise is only as good as the ability to notice it being broken, and nothing about a
 * Java signature says "an addon depends on this". So the whole public surface of
 * mchorse.bbs_mod.api is dumped into api/bbs-api.txt, which lives in the repository: a change to
 * it shows up in the diff of the commit that made it, and an accidental one is caught by apiCheck
 * before it ever reaches an addon. See ADDONS.md. */
def apiSnapshotFile = rootProject.file("api/bbs-api.txt")

def collectApiSignatures = {
	def dirs = []

	dirs.addAll(sourceSets.main.output.classesDirs.files)
	dirs.addAll(sourceSets.client.output.classesDirs.files)

	/* javap rather than a bytecode library: it comes with the JDK that is already running the
	 * build, and Gradle 9 took Project.exec away, so this is plain ProcessBuilder. */
	def javap = new File(new File(System.getProperty("java.home"), "bin"), "javap")
	def entries = [:]

	dirs.findAll { it.exists() }.each { dir ->
		def root = new File(dir, "mchorse/bbs_mod/api")

		if (!root.exists()) {
			return
		}

		def names = []

		root.eachFileRecurse { file ->
			if (file.name.endsWith(".class")) {
				names << dir.toPath().relativize(file.toPath()).toString()
					.replace(File.separator, "/")
					.replaceAll(/\.class$/, "")
					.replace("/", ".")
			}
		}

		if (names.isEmpty()) {
			return
		}

		def process = new ProcessBuilder([javap.absolutePath, "-protected", "-classpath", dir.absolutePath] + names.sort())
			.redirectErrorStream(true)
			.start()
		def output = process.inputStream.getText("UTF-8")

		if (process.waitFor() != 0) {
			throw new GradleException("javap failed while reading the addon API:\n" + output)
		}

		def header = null
		def members = null

		output.eachLine { line ->
			def trimmed = line.trim()

			if (trimmed.isEmpty() || trimmed.startsWith("Compiled from")) {
				return
			}

			if (trimmed == "}") {
				if (header != null) {
					entries.put(header, members.sort())
				}

				header = null
				members = null
			}
			else if (header == null) {
				header = trimmed
				members = []
			}
			else {
				members << trimmed
			}
		}
	}

	def builder = new StringBuilder()

	entries.keySet().sort().each { key ->
		builder.append(key).append("\n")
		entries.get(key).each { member -> builder.append("    ").append(member).append("\n") }
		builder.append("}\n\n")
	}

	return builder.toString()
}

tasks.register("apiDump") {
	group = "verification"
	description = "Writes the signatures of the addon API into api/bbs-api.txt."

	dependsOn tasks.named("classes"), tasks.named("clientClasses")

	doLast {
		apiSnapshotFile.parentFile.mkdirs()
		apiSnapshotFile.setText(collectApiSignatures(), "UTF-8")

		logger.lifecycle("Addon API snapshot written to ${apiSnapshotFile}")
	}
}

tasks.register("apiCheck") {
	group = "verification"
	description = "Fails when the addon API drifts from the snapshot in api/bbs-api.txt."

	dependsOn tasks.named("classes"), tasks.named("clientClasses")

	doLast {
		def current = collectApiSignatures()

		if (!apiSnapshotFile.exists()) {
			throw new GradleException("There is no addon API snapshot at ${apiSnapshotFile}. Run `gradlew apiDump` and commit it.")
		}

		def stored = apiSnapshotFile.getText("UTF-8").replace("\r\n", "\n")

		if (stored != current) {
			throw new GradleException("The addon API no longer matches api/bbs-api.txt. If the change is intended, run `gradlew apiDump` and commit the snapshot along with it; if it is not, this is an addon-breaking change that slipped in.")
		}
	}
}

tasks.named("build") {
	dependsOn tasks.named("apiCheck")
}
